--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License"
 ]
 dependencies = [
-    "llm"
+    "llm",
+    "transformers",
+    "torch",
 ]
 
 [project.urls]
