--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License"
 ]
 dependencies = [
-    "llm",
-    "transformers",
+    "llm>=0.16",
+    "transformers>=4.45.1",
     "torch",
     "soundfile",
     "pillow",
@@ -31,8 +31,9 @@ CI = "https://github.com/rectalogic/llm-transformers/actions"
 [project.entry-points.llm]
 transformers = "llm_transformers"
 
-[project.optional-dependencies]
-test = ["pytest"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 target-version = "py310"
@@ -62,4 +63,10 @@ select = [
     "INP",
     # pyupgrade
     "UP",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.3",
+    "ruff>=0.6.8",
 ]
