--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,18 +10,34 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.12"]
     steps:
     - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
+      with:
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: pip
-        cache-dependency-path: pyproject.toml
     - name: Install dependencies
-      run: |
-        pip install -e '.[test]'
+      run: uv sync --all-extras --dev --python ${{ matrix.python-version }} --python-preference only-system
+    - name: Cache models
+      id: cache-models
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/huggingface/hub/
+        save-always: true
+        # Update cache every time since models may be added
+        # https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache
+        key: models-${{ runner.os }}-${{ github.run_id }}
+        restore-keys: |
+          models-${{ runner.os }}
     - name: Run tests
-      run: |
-        python -m pytest
+      run: uv run pytest tests
+
+
+#XXX cache models
+#XXX lint
