--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+# Copyright (C) 2024 Andrew Wason
+# SPDX-License-Identifier: Apache-2.0
 [project]
 name = "llm-transformers"
 version = "0.1"
@@ -20,6 +22,7 @@ dependencies = [
     "protobuf",
     "pandas",
     "av",
+    "numpy>=2.1.1",
 ]
 
 [project.urls]
