--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,12 @@ jobs:
       matrix:
         python-version: ["3.12"]
     steps:
+    # Need more disk space for models
+    # https://github.com/easimon/maximize-build-space/blob/master/action.yml
+    - name: Cleanup
+      run: |
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+        sudo docker image prune --all --force
     - uses: actions/checkout@v4
     - name: Install uv
       uses: astral-sh/setup-uv@v2
