--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,9 @@ select = [
     "UP",
 ]
 
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S", "INP001"]
+
 [tool.pytest.ini_options]
 markers = [
     "llm: marks tests that run an LLM",
