--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,44 +8,29 @@ permissions:
   contents: read
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        cache: pip
-        cache-dependency-path: pyproject.toml
-    - name: Install dependencies
-      run: |
-        pip install -e '.[test]'
-    - name: Run tests
-      run: |
-        python -m pytest
+  call-test:
+    uses: ./.github/workflows/test.yml
   deploy:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [call-test]
     environment: release
     permissions:
       id-token: write
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
+      with:
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
         python-version: "3.12"
-        cache: pip
-        cache-dependency-path: pyproject.toml
     - name: Install dependencies
-      run: |
-        pip install setuptools wheel build
+      run: uv sync --all-extras --dev --python 3.12 --python-preference only-system
     - name: Build
       run: |
-        python -m build
+        uv build
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
