--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 [project]
 name = "llm-transformers"
-version = "0.1"
+version = "0.1.0"
 requires-python = ">= 3.12"
 description = "Plugin for llm adding support for 🤗 Hugging Face Transformers"
 readme = "README.md"
@@ -12,23 +12,23 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License"
 ]
 dependencies = [
-    "llm>=0.16",
-    "transformers>=4.45.1",
-    "torch>=2.4.1",
-    "soundfile>=0.12.1",
-    "pillow>=10.4.0",
-    "pytesseract>=0.3.13",
-    "timm>=1.0.9",
-    "protobuf>=5.28.2",
-    "pandas>=2.2.3",
-    "av>=13.0.0",
-    "numpy>=2.1.1",
+    "llm~=0.16",
+    "transformers~=4.45.1",
+    "torch~=2.4.1",
+    "soundfile~=0.12.1",
+    "pillow~=10.4.0",
+    "pytesseract~=0.3.13",
+    "timm~=1.0.9",
+    "protobuf~=5.28.2",
+    "pandas~=2.2.3",
+    "av~=13.0.0",
+    "numpy~=2.1.1",
 ]
 
 [tool.uv]
 dev-dependencies = [
-    "pytest>=8.3.3",
-    "ruff>=0.6.8",
+    "pytest~=8.3.3",
+    "ruff~=0.6.8",
 ]
 
 [project.urls]
